--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Hello Extensions",
-  "description": "Base Level Extension",
+  "name": "Temp Extensions",
+  "description": "Template Chrome Extension",
   "version": "1.0",
   "manifest_version": 3,
   "action": {
     "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
+    "default_icon": "temp_image.png"
   }
 }
