--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,14 @@
   "description": "Template Chrome Extension",
   "version": "1.0",
   "manifest_version": 3,
+  "icons": {
+    "16": "images/icon16.png",
+    "32": "images/icon32.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  },
   "action": {
-    "default_popup": "hello.html",
-    "default_icon": "temp_image.png"
+    "default_popup": "hello.html"
+    //, "default_icon": "temp_image.png"
   }
 }
