--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,16 @@
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": [
+        "https://developer.chrome.com/docs/extensions/*",
+        "https://developer.chrome.com/docs/webstore/*"
+      ]
+    }
+  ],
   "action": {
     "default_popup": "hello.html"
-    //, "default_icon": "temp_image.png"
   }
 }
