--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Temp Extensions",
   "description": "Template Chrome Extension",
   "version": "1.0",
+  "permissions": ["activeTab", "scripting"],
   "manifest_version": 3,
   "icons": {
     "16": "images/icon16.png",
