--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,9 @@
   "version": "1.0",
   "permissions": ["activeTab", "scripting"],
   "manifest_version": 3,
+  "background": {
+    "service_worker": "background.js"
+  },
   "icons": {
     "16": "images/icon16.png",
     "32": "images/icon32.png",
