--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "permissions": ["activeTab", "scripting"],
   "manifest_version": 3,
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "service-worker.js",
+    "type": "module"
   },
   "icons": {
     "16": "images/icon16.png",
