fix(make_extension_generic): Remove any extension specific code
 remove the module attribute from service worker for wider apeal extension

--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,7 @@
   "permissions": ["activeTab", "scripting"],
   "manifest_version": 3,
   "background": {
-    "service_worker": "service-worker.js",
-    "type": "module"
+    "service_worker": "service-worker.js"
   },
   "icons": {
     "16": "images/icon16.png",
